--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -52,7 +52,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
+  # - jekyll-feed
   - jemoji
   - jekyll-include-cache
 
@@ -61,16 +61,16 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Hi, I'm Daniel Wu, a 2nd year Biomedical Engineering Student. Welcome to my website, where I showcase my projects, professional experience, and share a bit about who I am."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://danielw21.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/DanielW21"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/daniel-wu-8436b7277/"
-
+    - label: "Email Me"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:daniel.wu05@outlook.com"
+      
 footer:
   links:
     - label: "GitHub"
@@ -79,6 +79,9 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/daniel-wu-8436b7277/"
+    - label: "Email Me!"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:daniel.wu05@outlook.com"
 
 defaults:
   # _posts
