--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Daniel Wu
 email: daniel.wu05@outlook.com
+url: https://danielw21.github.io
 baseurl: ""
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
