--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,13 @@ main:
     url: /
   - title: "Posts"
     url: /posts/
-  # - title: "Categories"
-  #   url: /categories/
+  - title: "Categories"
+    url: /categories/
   # - title: "Tags"
   #   url: /tags/
   # - title: "Work"
   #   url: /work/
+  - title: "Gallery"
+    url: /gallery/
   - title: "About"
     url: /about/
