--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ main:
     url: /posts/
   - title: "Categories"
     url: /categories/
-  # - title: "Tags"
-  #   url: /tags/
+  - title: "Tags"
+    url: /tags/
   # - title: "Work"
   #   url: /work/
   - title: "Gallery"
